<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_groups"
        android:icon="@drawable/ic_nav_groups"
        android:title="@string/groups" />
    
    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_nav_tasks"
        android:title="@string/tasks" />
    
    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_nav_statistics"
        android:title="@string/statistics" />
    
    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/chat" />
    
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/profile" />
</menu> 